--- a/ECC-prototype/config/database.yml
+++ b/ECC-prototype/config/database.yml
@@ -4,6 +4,13 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
+csep_eecodes-test:
+  adapater: mysql2
+  database: canine
+  username: csep_eecodes-test
+  password: Ethic$12
+  port: 3306
+
 default: &default
   adapter: sqlite3
   pool: 5
