--- a/ECC-prototype/config/database.yml
+++ b/ECC-prototype/config/database.yml
@@ -5,35 +5,28 @@
 #   gem 'sqlite3'
 #
 csep_eecodes-test:
-  adapter: mysql2
-  database: csep_eecodes-test
-  username: csep-test
-  password: Ethics$12
+  adapater: mysql2
+  database: canine
+  username: csep_eecodes-test
+  password: Ethic$12
   port: 3306
 
 default: &default
-  adapter: mysql2
-  database: csep_eecodes-test
-  username: csep-test
-  password: Ethics$12
-  port: 3306 
+  adapter: sqlite3
+  pool: 5
+  timeout: 5000
 
 development:
   <<: *default
-  adapter: mysql2
-  database: csep_eecodes-test
-  username: csep-test
-  password: Ethics$12
-  port: 3306 
-
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sql
+  database: db/test.sqlite3
 
 production:
   <<: *default
-  database: db/production.sql
+  database: db/production.sqlite3
