--- a/ECC-prototype/Gemfile
+++ b/ECC-prototype/Gemfile
@@ -59,3 +59,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 #################### Camaleon CMS include all gems for plugins and themes #################### 
 require './lib/plugin_routes' 
 instance_eval(PluginRoutes.draw_gems)
+
+gem 'code', path:  '/home/ariel/Ethics-Codes-Collection/ECC-prototype/apps/plugins/code/'
