--- a/ECC-prototype/Gemfile
+++ b/ECC-prototype/Gemfile
@@ -3,8 +3,8 @@ source 'https://rubygems.org'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.0', '>= 5.0.0.1'
-# Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+# Use mysql2 as the database for Active Record
+gem 'mysql2'
 # Use Puma as the app server
 gem 'puma', '~> 3.0'
 # Use SCSS for stylesheets
@@ -60,4 +60,3 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 require './lib/plugin_routes' 
 instance_eval(PluginRoutes.draw_gems)
 
-gem 'code', path:  '/home/ariel/Ethics-Codes-Collection/ECC-prototype/apps/plugins/code/'
